@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: November 27, 2010</p>
+      <p>Last Updated: November 28, 2010</p>
     </td>
   </tr>
 </table>
@@ -1988,6 +1988,12 @@ nuttx-5.15 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* net/send.c -- Check if the destination IP address is in the ARP table.  If
 	  not, then don't consider the packet sent.  It won't be, an ARP packet will go
 	  out instead.
+	* arch/arm/src/lpc17xx/lpc17_emacram.h and lpc17_allocateheap.c -- The Ethernet
+	  logic was using all of AHB SRAM Bank0 for Ethernet packet buffers (16Kb).  An
+	  option was added to limit the amount of SRAM used for packet buffering and to
+	  re-use any extra Bank0 memory for heap.  configs/olimex-lpc1766stk/nettest
+	  now uses only 8Kb at the beginning of Bank0; the 8Kb at the end of Bank0 is
+	  included in the heap
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
