@@ -206,7 +206,11 @@ CONFIG_PHY_KS8721=y
 CONFIG_PHY_AUTONEG=y
 CONFIG_PHY_SPEED100=n
 CONFIG_PHY_FDUPLEX=y
+CONFIG_NET_EMACRAM_SIZE=8192
+CONFIG_NET_NTXDESC=9
+CONFIG_NET_NRXDESC=9
 CONFIG_NET_REGDEBUG=n
+
 #
 # General build options
 #
